# tutorial_streamlit

./: .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  Venezuela.csv  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/Graphs/: linear_char.py
app/pages/: 01_Intro.py  02_diagram_venn.py  04_dashboard.py  05_explore_data.py  06_faker.py  07_facebook_ads_dashboard.py  08_personal_page.py  09_personal_menu.py  10_contact_form.py  11_resume.py
app/pages/resources/: style.css
app/static/style/: style.css
src/pages/: 01_Intro.py  02_diagram_venn.py  03_matplotlib.py
